@@ -11,7 +11,7 @@
     <extension point="xbmc.addon.metadata">
         <platform>linux</platform>
         <licence>gpl</licence>
-	<minversion>31504</minversion>
+	<minversion>31953</minversion>
         <summary>Collection of tools to ripping and transcoding videos.</summary>
         <description>This collection of tools operates as a GUI for ripping with dd / HandBrake and Makemkv.This script is may not allowed in some countrys.Neither the author of this script or the creators of xbmc are responsible if you break a law by ripping or transcode any dvd or bluray inside your current country.</description>
     </extension>
